{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 41,
  "lineage": "24a1543d-ab9e-b879-35f0-2847cdb467e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terra_Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732000274290:vpc/vpc-02ac63b181a81d14c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "80.0.0.0/16",
            "default_network_acl_id": "acl-0840385ccecbc7375",
            "default_route_table_id": "rtb-0080764c4728420d9",
            "default_security_group_id": "sg-02df621c0666e6c01",
            "dhcp_options_id": "dopt-92b904f9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02ac63b181a81d14c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0080764c4728420d9",
            "owner_id": "732000274290",
            "tags": {
              "Name": "Terra_VPC"
            },
            "tags_all": {
              "Name": "Terra_VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.Ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Vpc_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-041d6256ed0f2061c",
            "arn": "arn:aws:ec2:ap-south-1:732000274290:instance/i-063f7344920acc947",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063f7344920acc947",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devops-Demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f14559b3f7a1e0dc",
            "private_dns": "ip-80-0-11-195.ap-south-1.compute.internal",
            "private_ip": "80.0.11.195",
            "public_ip": "52.66.147.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ce1ce6c072bb3ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a833cf7bdaa1a6d",
            "tags": {
              "Name": "Vpc-Demo-EC2-Instance"
            },
            "tags_all": {
              "Name": "Vpc-Demo-EC2-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06171f4102ccc5fe1"
            ]
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc",
            "module.Ec2.aws_security_group.VPC_SG",
            "module.Ec2.data.aws_ami.latest-amazon-linux-image",
            "module.VPC_Subnets.aws_subnet.Vpc_SN"
          ]
        }
      ]
    },
    {
      "module": "module.Ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732000274290:security-group/sg-06171f4102ccc5fe1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06171f4102ccc5fe1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "VPC_SG",
            "name_prefix": "",
            "owner_id": "732000274290",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terra_SG"
            },
            "tags_all": {
              "Name": "Terra_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ac63b181a81d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Vpc_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732000274290:internet-gateway/igw-0ddfc523382d1b4eb",
            "id": "igw-0ddfc523382d1b4eb",
            "owner_id": "732000274290",
            "tags": {
              "Name": "Terra_IGW"
            },
            "tags_all": {
              "Name": "Terra_IGW"
            },
            "vpc_id": "vpc-02ac63b181a81d14c"
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Vpc_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732000274290:route-table/rtb-0dc12b933e8284d6e",
            "id": "rtb-0dc12b933e8284d6e",
            "owner_id": "732000274290",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddfc523382d1b4eb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terra_RT"
            },
            "tags_all": {
              "Name": "Terra_RT"
            },
            "vpc_id": "vpc-02ac63b181a81d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terra_Vpc",
            "module.VPC_Subnets.aws_internet_gateway.Vpc_IGW"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Vpc_RT_Associaton",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05336156c823c4752",
            "route_table_id": "rtb-0dc12b933e8284d6e",
            "subnet_id": "subnet-01a833cf7bdaa1a6d"
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc",
            "module.VPC_Subnets.aws_internet_gateway.Vpc_IGW",
            "module.VPC_Subnets.aws_route_table.Vpc_RT",
            "module.VPC_Subnets.aws_subnet.Vpc_SN"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Vpc_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732000274290:subnet/subnet-01a833cf7bdaa1a6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "80.0.0.0/20",
            "id": "subnet-01a833cf7bdaa1a6d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732000274290",
            "tags": {
              "Name": "Terra_SN"
            },
            "tags_all": {
              "Name": "Terra_SN"
            },
            "vpc_id": "vpc-02ac63b181a81d14c"
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    }
  ]
}